<resources>
    <string name="app_name">FYP Application</string>
    <string name="welcome">"Welcome Back!"</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">USERNAME</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="action_sign_in">Sign in           →</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Forgot password?</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="main_page_title">Main</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password is blank</string>
    <string name="login_failed_authentication">"username or password is invalid"</string>
    <string name="login_failed_unknown">System is currently unavailable please try again later</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_settings">Settings</string>
</resources>
