<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/signin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".ui.login.LoginActivity">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_width"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/fyp"
            android:scaleType="fitStart"
            />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_logo"
            android:layout_alignLeft="@+id/app_logo"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="15dp"
            android:text="@string/welcome"
            android:textSize="32dp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/sign_in_to_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome"
            android:layout_alignLeft="@+id/app_logo"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:text="@string/sign_in_to_continue"
            android:textSize="20dp"
            android:fontFamily="sans-serif-condensed"/>

        <RelativeLayout
            android:id="@+id/username_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_in_to_continue"
            android:layout_marginTop="60dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:padding="5dp"
            android:background="@color/light_grey"
            >
            <TextView
                android:id="@+id/username_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_alignParentStart="true"
                android:text="@string/prompt_username"
                android:textSize="9dp"
                android:letterSpacing="0.5"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="3dp"
                android:layout_below="@+id/username_title"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:selectAllOnFocus="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/password_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username_box"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:padding="5dp"
            android:background="@color/light_grey"
            >
            <TextView
                android:id="@+id/password_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_alignParentStart="true"
                android:text="@string/prompt_password"
                android:textSize="9dp"
                android:letterSpacing="0.5"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="3dp"
                android:layout_below="@+id/password_title"
                android:background="@android:color/transparent"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />
        </RelativeLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_box"
            android:layout_gravity="start"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:paddingVertical="5dp"
            android:background="@color/icon"
            android:enabled="false"
            android:text="@string/action_sign_in"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@android:color/holo_red_dark"/>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/errorText"
            android:layout_alignStart="@id/login_button"
            android:layout_marginTop="100dp"
            android:text="@string/forget_password"
            android:fontFamily="sans-serif-condensed"/>

        <TextView
            android:id="@+id/SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/errorText"
            android:layout_alignEnd="@id/login_button"
            android:layout_marginTop="100dp"
            android:text="@string/sign_up"
            android:fontFamily="sans-serif-condensed"/>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone" />
    </RelativeLayout>
</ScrollView>